--- a/eas.json
+++ b/eas.json
@@ -30,6 +30,7 @@
   "submit": {
     "production": {
       "ios": {
+        "ascAppId": "6759310735",
         "appleId": "maxwell@ninetynine.digital",
         "appleTeamId": "AWN2WCN26Y"
       }
